<resources>
    <string name="app_name">瑞云</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_home">首页</string>
    <string name="tab_message">设备</string>
    <string name="tab_discover">数据</string>
    <string name="tab_account">报表</string>

    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="settings">系统设置</string>
    <string name="user_feedback">用户反馈</string>
    <!--登录-->
    <string name="user_name">账号</string>
    <string name="password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="account_empty">用户名不能为空</string>
    <string name="password_empty">密码不能为空</string>
    <string name="login_error">用户名或密码错误</string>

    <!--fragment-->
    <string name="fragment_main">首页</string>
    <string name="fragment_equip">设备</string>
    <string name="fragment_data">数据</string>
    <string name="fragment_chart">报表</string>

    <!--navigation_menu-->
    <string name="user_info">个人信息</string>
    <string name="company_info">公司信息</string>
    <string name="my_msg">我的消息</string>
    <string name="setting">系统设置</string>

    <!--个人信息-->
    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="mobile">联系方式</string>
    <string name="realname">真实姓名</string>

    <!--所属公司信息-->
    <string name="company_name">名称</string>
    <string name="company_desc">描述</string>
    <string name="company_address">地址</string>
    <string name="company_email">邮箱</string>
    <string name="company_zipcode">邮编</string>
    <string name="company_phone">联系方式</string>
    <string name="company_updatetime">信息更新时间</string>

    <!--添加控制器-->
    <string name="product_name">产品名称</string>
    <string name="equipment_desc">设备备注</string>
    <string name="equipment_guid">设备GUID</string>
    <string name="is_invalidate">有效性</string>

</resources>
