<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:orientation="vertical"
    tools:context="com.mr.mrdetect.ui.activity.PersonInfoActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/company_name_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/view_click_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:text="@string/company_name"
                />

            <TextView
                android:id="@+id/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@color/gray_background"/>

        <LinearLayout
            android:id="@+id/company_desc_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/view_click_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            >

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_20"
                android:textSize="@dimen/sp_16"
                android:text="@string/company_desc"
                />

            <TextView
                android:id="@+id/company_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:layout_gravity="right"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@color/gray_background"/>

        <RelativeLayout
            android:id="@+id/company_address_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/view_click_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:text="@string/company_address"
                />

            <TextView
                android:id="@+id/company_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@color/gray_background"/>

        <RelativeLayout
            android:id="@+id/company_email_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/view_click_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:text="@string/company_email"
                />

            <TextView
                android:id="@+id/company_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@color/gray_background"/>

        <RelativeLayout
            android:id="@+id/company_zipcode_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/view_click_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:text="@string/company_zipcode"
                />

            <TextView
                android:id="@+id/company_zipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@color/gray_background"/>

        <RelativeLayout
            android:id="@+id/company_phone_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/view_click_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:text="@string/company_phone"
                />

            <TextView
                android:id="@+id/company_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
